# lib_sw_pll

./: .gitignore  .xmos_ignore_source_check  CHANGELOG.rst  CMakeLists.txt  Jenkinsfile  README.md  README.rst  index.rst  requirements.txt  settings.yml  setup.py
.github/workflows/: docs.yml
doc/: Docyfile.inc  Doxyfile.inc  exclude-patterns.inc  exclude_patterns.inc  generating_lut_guide.rst  index.rst  settings.json  settings.yml  substitutions.inc  substitutions.rst-inc  sw_pll.rst
doc/diagram_source/: PLL_block_diagram.drawio  lut_pll.drawio  resource_setup_sw_pll_Example.drawio  resource_setup_sw_pll_i2s_slave_example.drawio  resource_setup_sw_pll_simple_example.drawio  sdm_pll.drawio  sdm_threads.drawio  sw_pll_model_architecture.drawio
doc/rst/: lib_sw_pll.rst  sw_pll.rst
examples/: CMakeLists.txt  examples.cmake
examples/app_i2s_slave_lut/src/: fractions.h  i2s_slave_sw_pll.c  main.xc  register_setup.h
examples/app_simple_lut/: CMakeLists.txt
examples/app_simple_lut/src/: fractions.h  main.xc  register_setup.h  simple_sw_pll.c
examples/app_simple_sdm/: CMakeLists.txt
examples/app_simple_sdm/src/: main.xc  register_setup.h  simple_sw_pll_sdm.c
examples/i2s_slave/: i2s_slave.cmake
examples/i2s_slave/src/: fractions.h  i2s_slave_sw_pll.c  main.xc  simple_sw_pll.c  xvf3800_qf60.xn
examples/i2s_slave_lut/: CMakeLists.txt  i2s_slave_lut.cmake
examples/i2s_slave_lut/src/: config.xscope  i2s_slave_sw_pll.c  register_setup.h
examples/shared/src/: clock_gen.c  clock_gen.h  resource_setup.c  resource_setup.h
examples/simple/: simple.cmake
examples/simple/src/: fractions.h  main.xc  simple_sw_pll.c
examples/simple_lut/: CMakeLists.txt  simple_lut.cmake
examples/simple_lut/src/: fractions.h  main.xc  simple_sw_pll.c
examples/simple_sdm/: CMakeLists.txt  simple_sdm.cmake
examples/simple_sdm/src/: main.xc  register_setup.h  simple_sw_pll_sdm.c
lib_sw_pll/: CMakeLists.txt  Doxyfile.inc  lib_build_info.cmake  module_build_info
lib_sw_pll/api/: sw_pll.h
lib_sw_pll/src/: sw_pll.c  sw_pll_common.c  sw_pll_common.h  sw_pll_lut.c  sw_pll_pfd.c  sw_pll_pfd.h  sw_pll_sdm.c  sw_pll_sdm.h
python/: generating_lut_guide.txt  pid_sim.py  setup.py  sw_pll_sim.py
python/sw_pll/: analysis_tools.py  app_pll_model.py  controller_model.py  dco_model.py  pfd_model.py  pll_calc.py  pll_vcd.py  sw_pll_sim.py
tests/: .gitignore  CMakeLists.txt  requirements.txt  test_deps.cmake  test_lib_checks.py  test_lib_sw_pll.py  test_lib_sw_pll_equiv.py  test_sdm_ctrl_equiv.py  test_sdm_dco_equiv.py
tests/test_app/: CMakeLists.txt  main.c
tests/test_app_low_level_api/: CMakeLists.txt  main.c
tests/test_app_sdm_ctrl/: CMakeLists.txt  main.c
tests/test_app_sdm_dco/: CMakeLists.txt  main.c
tests/test_fixed/: CMakeLists.txt  main.c
tools/ci/: checkout-submodules.sh  do-ci-build.sh  do-ci-tests.sh  do-ci.sh  do-model-examples.sh
